--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,19 @@
 /build
 
 # Generated files
-.docusaurus
+.vitepress
 .cache-loader
 .vscode
 
 # Misc
 .DS_Store
+.editorconfig
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
