--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-	"scripts": {
-		"docusaurus": "docusaurus",
-		"start": "docusaurus start",
-		"build": "docusaurus build",
-		"swizzle": "docusaurus swizzle",
-		"deploy": "docusaurus deploy",
-		"clear": "docusaurus clear",
-		"serve": "docusaurus serve",
-		"write-translations": "docusaurus write-translations",
-		"write-heading-ids": "docusaurus write-heading-ids"
-	},
-	"dependencies": {
-		"@docusaurus/core": "2.0.0-beta.21",
-		"@docusaurus/preset-classic": "2.0.0-beta.21",
-		"@mdx-js/react": "^1.6.22",
-		"clsx": "^1.1.1",
-		"prism-react-renderer": "^1.3.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
-	},
+	"license": "Apache-2.0",
 	"devDependencies": {
-		"@docusaurus/module-type-aliases": "2.0.0-beta.21"
+		"vitepress": "1.0.0-alpha.8",
+		"vue": "^3.2.37"
+	},
+	"scripts": {
+		"start": "vitepress dev docs",
+		"build": "vitepress build docs",
+		"serve": "yarn build && vitepress serve docs"
 	}
 }
