--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
 	"license": "Apache-2.0",
-	"devDependencies": {
-		"vitepress": "1.0.0-alpha.8",
-		"vue": "^3.2.37"
+	"engines": {
+		"node": ">= 16"
 	},
 	"scripts": {
-		"start": "vitepress dev docs",
-		"build": "vitepress build docs",
-		"serve": "yarn build && vitepress serve docs"
+		"start": "vitepress dev",
+		"build": "vitepress build",
+		"serve": "yarn build && vitepress serve"
+	},
+	"devDependencies": {
+		"vitepress": "1.0.0-alpha.65",
+		"vue": "^3.2.47",
+		"flexsearch": "^0.7.31",
+		"markdown-it": "^13.0.1",
+		"vitepress-plugin-search": "1.0.4-alpha.19"
 	}
 }
