--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
 		"serve": "vitepress serve"
 	},
 	"devDependencies": {
-		"vitepress": "1.0.0-alpha.65",
-		"vue": "^3.2.47",
-		"flexsearch": "^0.7.31",
-		"markdown-it": "^13.0.1",
-		"vitepress-plugin-search": "1.0.4-alpha.19"
+		"vitepress": "1.0.0-alpha.71",
+		"vue": "^3.2.47"
 	}
 }
