--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"serve": "vitepress serve"
 	},
 	"devDependencies": {
-		"vitepress": "1.0.0-alpha.71",
-		"vue": "^3.2.47"
+		"vitepress": "1.0.0-beta.5",
+		"vue": "^3.3.4"
 	}
 }
