--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"license": "Apache-2.0",
 	"engines": {
-		"node": ">= 16"
+		"node": ">= 18"
 	},
 	"scripts": {
 		"start": "vitepress dev",
@@ -9,7 +9,7 @@
 		"serve": "vitepress serve"
 	},
 	"devDependencies": {
-		"vitepress": "1.0.0-beta.5",
+		"vitepress": "1.0.0-rc.17",
 		"vue": "^3.3.4"
 	}
 }
